--- a/package.json
+++ b/package.json
@@ -10,17 +10,43 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/webpack-config": "~0.16.2",
+    "@gorhom/bottom-sheet": "^4.3.0",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/drawer": "^6.4.1",
+    "@react-navigation/material-top-tabs": "^6.2.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
+    "@types/react-native-calendars": "^1.1264.3",
+    "date-fns": "^2.28.0",
     "expo": "~45.0.0",
+    "expo-auth-session": "~3.6.1",
+    "expo-random": "~12.2.0",
     "expo-status-bar": "~1.3.0",
+    "firebase": "^9.6.11",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-native": "0.68.1",
-    "react-native-web": "0.17.7"
+    "react-native": "0.68.2",
+    "react-native-calendars": "^1.1284.0",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-modal-datetime-picker": "^13.1.2",
+    "react-native-pager-view": "5.4.15",
+    "react-native-paper": "^4.12.1",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-tab-view": "^3.1.1",
+    "react-native-vector-icons": "^9.1.0",
+    "react-native-web": "0.17.7",
+    "webpack-dev-server": "~3.11.0",
+    "expo-updates": "~0.13.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
+    "@types/react-native-datepicker": "^1.7.1",
     "typescript": "~4.3.5"
   },
   "private": true
